// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid : Row should render as expected in its default state 1`] = `
.emotion-0 {
  display: block;
}

.emotion-0:before,
.emotion-0:after {
  content: '';
  display: table;
  clear: both;
}

@media (min-width:640px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

<div
  className="emotion-0"
>
  <p>
    Hello World
  </p>
</div>
`;

exports[`Grid : Row should render with display:block when "allowMismatchedHeights" is TRUE 1`] = `
.emotion-0 {
  display: block;
}

.emotion-0:before,
.emotion-0:after {
  content: '';
  display: table;
  clear: both;
}

<div
  className="emotion-0"
>
  <p>
    Hello World
  </p>
</div>
`;

exports[`Grid : Row should render with display:flex (on non-mobile screens) when "allowMismatchedHeights" is FALSE 1`] = `
.emotion-0 {
  display: block;
}

.emotion-0:before,
.emotion-0:after {
  content: '';
  display: table;
  clear: both;
}

@media (min-width:640px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

<div
  className="emotion-0"
>
  <p>
    Hello World
  </p>
</div>
`;
